using System;
using System.Collections.Generic;
using System.Linq;
using System.Text;
using System.Threading.Tasks;

namespace Assets.Scripts
{
    public class AnimatorParameters 
    {

            public string boolWalking { get { return "walking"; } }
            public string boolIsGrounded { get { return "isgrounded"; } }

            

            public string jumped { get{ return "jumped";} }


    }

        

            


        
}


